Updated for publication
Changed links to txties and added viewport meta tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width">
     <title>The world's tinest CMS using txti.es</title>
     <!-- these styles just included to show how you can style everything how you wish -->
     <style>
@@ -39,14 +40,14 @@
 <body>
     <h1>The world's smallest CMS using txti.es</h1>
     <hr>
-    <h2>This content comes from txti.es/barry</h2>
+    <h2>This content comes from txti.es/hipster</h2>
     <!-- include the data-src attribute pointing to the txti of your choice on any element -->
-    <div data-src="http://txti.es/barry/html">JavaScript seems to be disabled. View this content at <a href="http://txti.es/barry/html">txti.es/barry/html</a></div>
+    <div data-src="http://txti.es/hipster/html">JavaScript seems to be disabled. View this content at <a href="http://txti.es/hipster">txti.es/hipster</a></div>
     
     <hr>
-    <h2>This content comes from txti.es/geoff</h2>
+    <h2>This content comes from txti.es/riker</h2>
     <!-- notice the helpful text inside the element in case JavaScript is disabled -->
-    <div data-src="http://txti.es/geoff/html">JavaScript seems to be disabled. View this content at <a href="http://txti.es/geoff/html">txti.es/geoff/html</a></div>    
+    <div data-src="http://txti.es/riker/html">JavaScript seems to be disabled. View this content at <a href="http://txti.es/riker">txti.es/riker</a></div>    
     
     <!-- paste this script right before the closing body tag -->
     <script>
